--- a/index.html
+++ b/index.html
@@ -228,9 +228,9 @@ iframe{
             <h1>📦</h1>
             <h3>CAJAS</h3>
         </div>
-        <div class="card" onclick="alert('Módulo de BASÍLICA en construcción...')">
+        <div class="card" onclick="lanzarApp('https://santisgallegos123-rgb.github.io/BASILICA', 'Basilica')">
             <h1>⛪</h1>
-            <h3>BASÍLICA</h3>
+            <h3>BASÍLICA</h3>/
         </div>
         <div class="card" onclick="alert('Módulo de BODEGA PT en construcción...')">
             <h1>🏬</h1>
@@ -366,4 +366,5 @@ iframe{
 </script>
 
 </body>
+
 </html>
