--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@ iframe{
         </div>
         <div class="card" onclick="lanzarApp('https://santisgallegos123-rgb.github.io/BASILICA', 'Basilica')">
             <h1>⛪</h1>
-            <h3>BASÍLICA</h3>/
+            <h3>BASÍLICA</h3>
         </div>
         <div class="card" onclick="alert('Módulo de BODEGA PT en construcción...')">
             <h1>🏬</h1>
@@ -368,3 +368,4 @@ iframe{
 </body>
 
 </html>
+
