--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                     <input type="text" id="out_unit" placeholder="pzs, kg, rollos...">
                     <label>Modelo / Uso:</label>
                     <input type="text" id="out_model">
-                    <label>Referencia:</label>
+                    <label>Folio:</label>
                     <input type="text" id="out_ref">
                     <button class="btn-submit btn-out" onclick="procesar('salida')">DAR DE BAJA</button>
                 </aside>
@@ -252,7 +252,7 @@
                     <input type="text" id="in_unit" placeholder="pzs, kg, rollos...">
                     <label>Modelo:</label>
                     <input type="text" id="in_model">
-                    <label>Referencia:</label>
+                    <label>Requisicion:</label>
                     <input type="text" id="in_ref">
                     <button class="btn-submit btn-in" onclick="procesar('entrada')">DAR DE ALTA</button>
                 </aside>
@@ -430,3 +430,4 @@
 </script>
 </body>
 </html>
+
