--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
     const configs = {
         laminas: { apiKey: "AIzaSyAm3_glzSwxKc_B6b9F3WSMtnTbRPlz82g", databaseURL: "https://laminas-12ea7-default-rtdb.firebaseio.com", projectId: "laminas-12ea7" },
         cajas: { apiKey: "AIzaSyB8wVMIhqa9OAFJCt3bzqouip2ICtqJkNQ", databaseURL: "https://almacen-cajas-filsa-default-rtdb.firebaseio.com", projectId: "almacen-cajas-filsa" },
-        basilica: { apiKey: "AIzaSyA_CeDhAhWEyqBO5rO0yo2JdttXKz5CCjU", databaseURL: "https://basilica-dd3b1-default-rtdb.firebaseio.com", projectId: "basilica-dd3b1" },
+        basilica: {apiKey: "AIzaSyArJXmpHrZNbGz3AYRtz2pg_g-PghfxgkI", databaseURL: "https://basilica-dd3b1-default-rtdb.firebaseio.com", projectId: "basilica-c0fe0"},
         mallas: { apiKey: "AIzaSyB6Zs6aRV5YV5DoRKfRvXj-306tkAU-LMU", databaseURL: "https://mallas-ffb9b-default-rtdb.firebaseio.com", projectId: "mallas-ffb9b" },
         almacen: { apiKey: "AIzaSyByT_G8...", databaseURL: "https://almacen-general-default-rtdb.firebaseio.com", projectId: "almacen-general" },
         terminado: { apiKey: "AIzaSyD_Xy1...", databaseURL: "https://producto-terminado-default-rtdb.firebaseio.com", projectId: "producto-terminado" }
@@ -389,3 +389,4 @@
 </script>
 </body>
 </html>
+
