--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sistema de Inventariado | Santis Gallego S.A.S</title>
+    <title>Sistema de Inventariado </title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -205,7 +205,7 @@
                 <div><b>Almacén General</b><span>Materia prima</span></div>
             </div>
             
-            <div class="boton-modulo" onclick="lanzarApp('https://santisgallegos123-rgb.github.io/PRODUCTO-TERMINADO/')">
+            <div class="boton-modulo" onclick="lanzarApp('https://santisgallegos123-rgb.github.io/producto-terminado/')">
                 <i>✅</i>
                 <div><b>Producto Terminado</b><span>Listo para envío</span></div>
             </div>
@@ -389,4 +389,5 @@
 </script>
 </body>
 </html>
+
 
